manifests/07_api-gate/api-gate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gate-asp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gate-asp
  template:
    metadata:
      labels:
        app: api-gate-asp
    spec:
      containers:
      - name: api-gate-asp
        image: kdeit/asp-gate:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
