manifests/07_api-gate/api-gate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gate-asp
spec:
  selector:
    app: api-gate-asp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
